[package]
name = "sc-piece-cache"
description = "Cache of pieces in aux storage"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2021"
include = [
	"/src",
	"/Cargo.toml",
	"/README.md",
]

[dependencies]
bytesize = "1.1.0"
parity-scale-codec = { version = "3.2.1" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "6d57dbc639bb3d9460dabeccb063cc6556452535" }
subspace-core-primitives = { version = "0.1.0", path = "../subspace-core-primitives" }
subspace-networking = { version = "0.1.0", path = "../subspace-networking" }
tracing = "0.1.37"
