[package]
name = "sc-subspace-block-relay"
description = "Block relay implementation"
license = "0BSD"
version = "0.1.0"
authors = ["Rahul Subramaniyam <rahulksnv@gmail.com>"]
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
async-channel = "1.9.0"
async-trait = "0.1.83"
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.31"
parking_lot = "0.12.2"
sc-client-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "949bb3cfb64ab974e4fc49328fb3e81c96bc0fbe" }
sc-network = { git = "https://github.com/subspace/polkadot-sdk", rev = "949bb3cfb64ab974e4fc49328fb3e81c96bc0fbe" }
sc-network-common = { git = "https://github.com/subspace/polkadot-sdk", rev = "949bb3cfb64ab974e4fc49328fb3e81c96bc0fbe" }
sc-network-sync = { git = "https://github.com/subspace/polkadot-sdk", rev = "949bb3cfb64ab974e4fc49328fb3e81c96bc0fbe" }
sp-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "949bb3cfb64ab974e4fc49328fb3e81c96bc0fbe" }
sp-consensus-subspace = { version = "0.1.0", path = "../sp-consensus-subspace" }
sc-transaction-pool-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "949bb3cfb64ab974e4fc49328fb3e81c96bc0fbe" }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "949bb3cfb64ab974e4fc49328fb3e81c96bc0fbe" }
strum_macros = "0.26.4"
subspace-core-primitives = { version = "0.1.0", path = "../subspace-core-primitives" }
substrate-prometheus-endpoint = { git = "https://github.com/subspace/polkadot-sdk", rev = "949bb3cfb64ab974e4fc49328fb3e81c96bc0fbe" }
thiserror = "2.0.0"
tracing = "0.1.40"
