[package]
name = "sc-subspace-block-relay"
description = "Block relay implementation"
license = "0BSD"
version = "0.1.0"
authors = ["Rahul Subramaniyam <rahulksnv@gmail.com>"]
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
async-channel.workspace = true
async-trait.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["full"] }
futures.workspace = true
parking_lot.workspace = true
sc-client-api.workspace = true
sc-network.workspace = true
sc-network-common.workspace = true
sc-network-sync.workspace = true
sp-api.workspace = true
sp-consensus-subspace.workspace = true
sc-transaction-pool-api.workspace = true
sp-runtime.workspace = true
strum_macros.workspace = true
subspace-core-primitives.workspace = true
substrate-prometheus-endpoint.workspace = true
thiserror.workspace = true
tracing.workspace = true
