[package]
name = "sc-subspace-block-relay"
description = "Block relay implementation"
license = "0BSD"
version = "0.1.0"
authors = ["Rahul Subramaniyam <rahulksnv@gmail.com>"]
edition.workspace = true
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
async-channel.workspace = true
async-trait.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["full"] }
futures.workspace = true
parking_lot.workspace = true
sc-client-api.workspace = true
sc-network.workspace = true
sc-network-common.workspace = true
sc-network-sync.workspace = true
sp-api = { workspace = true, features = ["std"] }
sp-consensus-subspace = { workspace = true, features = ["std"] }
sc-transaction-pool-api.workspace = true
sp-runtime = { workspace = true, features = ["std"] }
strum_macros.workspace = true
subspace-core-primitives = { workspace = true, features = ["std"] }
subspace-runtime-primitives = { workspace = true, features = ["std"] }
substrate-prometheus-endpoint.workspace = true
thiserror.workspace = true
tracing = { workspace = true, features = ["std"] }
