[package]
name = "sc-subspace-chain-specs"
description = "Chain specification data structures tailored for Subspace"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
version = "0.1.0"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
]
